# opencodelists

./: .dockerignore  .eslintrc.json  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  0002-backup-sanitisation.md  CHECKS  CLAUDE.md  CONVENTIONS.md  DEPLOY.md  DEVELOPERS.md  LICENCE  LOCAL_TEST_DEPLOYMENT.md  Makefile  Procfile  README.md  STRUCTURE.md  TEST_DEPLOYMENT.md  aider.sh  app.json  biome.json  check_formatting.sh  conftest.py  deletedusers_2025-01-07T15:08:53.296275.csv  disorder-of-elbow.csv  docker-compose.yaml  dokku.sh  dotenv-sample  dummy_coding_system.py  environment.sample  fabfile.py  fix_formatting.sh  justfile  local-ci-pipeline.sh  local-deploy.sh  local-redeploy.sh  manage.py  nginx.conf.sigil  (+22 more)
.dependabot/: config.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: 0010_default.md  0020_bug_report.md  0030_enhancement_request.md
.github/workflows/: codeql-analysis.yml  deploy.yml  main.yml  update-python-dependencies.yml
builder/: actions.py  decorators.py  forms.py  models.py  urls.py  views.py
builder/migrations/: 0001_initial.py  0001_squashed_0003_20250425.py  0002_auto_20200929_1649.py  0002_switch_charfield_to_textfield.py  0003_auto_20210506_1345.py
builder/static/: builder.js
builder/tests/: test_actions.py  test_views.py
codelists/: actions.py  admin.py  api.py  api_decorators.py  api_urls.py  apps.py  base_coding_system.py  codeset.py  coding_system.py  coding_systems.py  definition.py  definition2.py  forms.py  hierarchy.py  hierarchy_utils.py  import_codelist.py  models.py  presenters.py  search.py  similarity.py  similarity_service.py  tree_data.py  tree_utils.py  urls.py  validation.py  views.py
codelists/migrations/: 0001_initial.py  0001_squashed_0059_20250423.py  0002_auto_20200424_0943.py  0003_auto_20200628_0923.py  0004_auto_20200722_1437.py  0005_codelistversion.py  0006_auto_20200722_1437.py  0007_auto_20200722_1438.py  0008_add_codelist_version_definition_field.py  0008_swap_name_for_slug_in_codelist_uniqueness_constraint.py  0008_switch_charfield_to_textfield.py  0009_auto_20201110_1957.py  0009_codelistlabel.py  0010_auto_20201008_0912.py  0010_codelist_organisation.py  0011_auto_20201008_0941.py  0011_auto_20201112_0857.py  0012_auto_20201112_0924.py  0013_auto_20201112_0938.py  0014_remove_codelist_project.py  0015_auto_20201116_1744.py  0016_auto_20201116_1754.py  0017_auto_20201119_0927.py  0018_auto_20201119_0927.py  0019_auto_20201119_0930.py  0020_auto_20201119_0932.py  0021_auto_20201119_0932.py  0022_auto_20201122_1444.py  0023_auto_20201122_1448.py  0024_codelistversion_discarded.py  0025_auto_20201123_1708.py  0026_auto_20201126_1701.py  0027_auto_20210114_1139.py  0028_collaboration.py  0029_auto_20210223_1123.py  0030_auto_20210412_0947.py  0031_auto_20210413_0829.py  0032_auto_20210423_1116.py  0033_auto_20210429_1029.py  0034_auto_20210429_1029.py  (+39 more)
codelists/scripts/: README.md  ad_hoc_old_style_snomed.json  bulk_import_codelists.py  convert_codelist_to_new_style.py  dump_rsi_json.py  gbd_icd_bundles.json  import_codelists_from_xlsx.py  nhs_d_primary_care_refsets.json  nhsd_primary_care_refsets.json  rebuild_compatible_releases.py  ssi-opcs.json  update_missing_cached_hierarchies.py  update_nhs_refsets.py  update_pcd_refsets.py
codelists/templatetags/: definitions.py  text_filters.py  tree_helpers.py
codelists/tests/: definition_test_data.py  expected_html_tree.html  factories.py  helpers.py  test_actions.py  test_api.py  test_api_decorators.py  test_bulk_import_codelists.py  test_codeset.py  test_commands.py  test_db_utils.py  test_definition.py  test_definition2.py  test_forms.py  test_hierarchy.py  test_import_codelists_from_xlsx.py  test_migrations.py  test_models.py  test_presenters.py  test_search.py  test_similarity.py  test_similarity_algorithms.py  test_text_filters.py  test_tree_data.py  test_tree_utils.py  test_update_missing_cached_hierarchies.py  test_update_refsets.py  test_views.py
codelists/views/: __init__.py  codelist.py  codelist_clone.py  codelist_create.py  codelist_fork.py  codelist_update.py  decorators.py  index.py  (+12 more)
coding_systems/: conftest.py
conversions/: forms.py  urls.py  views.py
ctv3/: apps.py  import_data.py  models.py  urls.py
deploy/: prod.sh  release.sh
docker/: Dockerfile  build-dependencies.txt  dependencies.txt  docker-compose.test.yaml  docker-compose.yaml  justfile
docs/: creating-a-codelist-from-a-csv-file.md  creating-a-codelist-from-scratch.md  creating-an-account.md  editing-a-codelist.md  future-plans.md  reporting-bugs-requesting-features-and-asking-for-help.md  status-of-the-project.md  using-a-codelist-in-opensafely-research.md  viewing-a-codelist.md  views.py
e2e_tests/: test_e2e.py  test_e2e_docs_screenshots.py
maintenance/: __init__.py
mappings/: __init__.py
opencodelists/: actions.py  admin.py  asgi.py  context_processors.py  csv_utils.py  db_utils.py  dict_utils.py  django_test_runner.py  forms.py  hash_utils.py  list_utils.py  models.py  settings.py  urls.py  views.py  wsgi.py
rctctv3map/: import_data.py  models.py
readv2/: apps.py
scripts/: collect-me-maybe.sh  fetch_vmp_prev.py  generate_icd10_warning_pdfs.py  profile_update.py  remove_snomed_usage_imports.py  show_snomed_usage_history.py  update_stale_dmd_codelists.py
services/: logging.py  tracing.py
snomedct/: apps.py  import_data.py
static/: manifest.webmanifest  robots.txt
superusers/: views.py
templates/: _feedback_form.html  base-tw.html  base.html  components.yaml  contact.html  error.html
userdocs/: cloning-a-codelist.md  converting-pseudo-bnf-codelists-to-dmd.md  converting-psuedo-bnf-codelists-to-dmd.md  creating-a-codelist-from-a-csv-file.md  creating-a-codelist-from-scratch.md  creating-an-account.md  diffing-codelists.md  editing-a-codelist.md  future-plans.md  icd10-editions.md  organisations.md  selecting-appropriate-codes.md  status-of-the-project.md  urls.py  viewing-a-codelist.md  viewing-your-codelists.md  views.py  what-is-a-codelist  what-is-a-codelist.md
(+668 files in other folders)
