[project]
name = "opencodelists"
version = "0.1.0"
description = "OpenCodelists"
readme = "README.md"
authors = [{name = "OpenSAFELY", email = "tech@opensafely.org"}]
license = {file = "LICENCE"}
requires-python = ">=3.12"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "beautifulsoup4>=4.14.3",
    "crispy-bootstrap4>=2026.2",
    "dj-database-url>=3.1.2",
    # Pin to 5.2.x until 6.0 is released and we are happy with 6.0 compatibility
    "django~=5.2.13",
    "django-anymail[mailgun]>=15.0",
    "django-cors-headers>=4.9.0",
    "django-crispy-forms>=2.6",
    "django-extensions>=4.1",
    "django-structlog>=10.0.0",
    "django-taggit>=6.1.0",
    "django-vite>=3.1.0",
    "djangorestframework>=3.17.1",
    "faker>=40.15.0",
    "furl>=2.1.4",
    "gunicorn>=25.3.0",
    "lxml>=6.1.0",
    "markdown2>=2.5.5",
    "nh3>=0.3.5",
    "openpyxl>=3.1.5",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-django>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    # pinned to mimmum version for security patch (https://github.com/opensafely-core/opencodelists/commit/99374a6aee474e6873f41f0fb2af766b9a8da61d)
    "requests>=2.32.4",
    "sentry-sdk>=2.58.0",
    "slippers>=0.7.0",
    "sqlean-py>=3.50.4.5",
    "structlog>=25.5.0",
    "tqdm>=4.67.3",
    "whitenoise[brotli]>=6.12.0",
]

[tool.coverage.run]
branch = true
omit = [
  "opencodelists/asgi.py",
  "opencodelists/django_test_runner.py",
  "opencodelists/settings.py",
  "opencodelists/wsgi.py",
  "staticfiles",
  "*/migrations/*",
  "coding_systems/snomedct/parser_utils/*",
  "scripts/fetch_vmp_prev.py"
]

# Required to get full coverage when using Playwright
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
skip_covered = true

[tool.coverage.html]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "opencodelists.settings"
addopts = "--tb=native --ignore=node_modules --no-migrations --strict-markers"
filterwarnings = [
  "ignore:The FORMS_URLFIELD_ASSUME_HTTPS transitional setting is deprecated.",
]
markers = [
  "functional: tests that use Playwright in functional tests",
]

# This is the pytest-django default. We're setting it explicitly, to
# make it clear that tests are not run in debug mode.
django_debug_mode = false

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "assets",
  "coding_systems/snomedct/parser_utils/",
  "coverage",
  "deploy",
  "docker",
  "docs",
  "htmlcov",
  "*/migrations/",
  "node_modules",
  "static",
  "staticfiles",
  "venv",
]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "E501",
  "E731",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"gunicorn.conf.py" = ["INP001"]
"manage.py" = ["INP001"]
"codelists/views/__init__.py" = ["F401"]
"opencodelists/views/__init__.py" = ["F401"]

[tool.uv]
required-version = ">=0.9"

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "djhtml>=3.0.11",
    "hypothesis>=6.152.3",
    # for scripts/import_codelists_from_xlsx.py
    "pandas>=3.0.2",
    # For scripts/fetch_vmp_prev.py
    "paramiko>=4.0.0",
    "pre-commit>=4.6.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-playwright>=0.7.2",
    "responses>=0.26.0",
    "ruff>=0.15.12",
]
