[project]
name = "opencodelists"
version = "0.1.0"
description = "OpenCodelists"
readme = "README.md"
authors = [{name = "OpenSAFELY", email = "tech@opensafely.org"}]
license = {file = "LICENCE"}
requires-python = ">=3.12"
dependencies = [
    "antlr4-python3-runtime",
    "beautifulsoup4",
    "crispy-bootstrap4",
    "dj-database-url",
    # Pin to 5.2.x until 6.0 is released and we are happy with 6.0 compatibility
    "django>=5.2,<6.0",
    "django-anymail[mailgun]",
    "django-cors-headers",
    "django-crispy-forms",
    "django-extensions",
    "django-structlog",
    "django-taggit",
    "django-vite",
    "djangorestframework",
    "faker",
    "furl",
    "gunicorn",
    "lxml",
    "markdown2",
    "nh3",
    "openpyxl",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-django",
    "opentelemetry-sdk",
    # pinned to mimmum version for security patch (https://github.com/opensafely-core/opencodelists/commit/99374a6aee474e6873f41f0fb2af766b9a8da61d)
    "requests>=2.32.4",
    "sentry-sdk",
    "slippers",
    "sqlean-py",
    "structlog",
    "tqdm",
    "whitenoise[brotli]",
]

[tool.coverage.run]
branch = true
omit = [
  "opencodelists/asgi.py",
  "opencodelists/django_test_runner.py",
  "opencodelists/settings.py",
  "opencodelists/wsgi.py",
  "staticfiles",
  "*/migrations/*",
  "coding_systems/snomedct/parser_utils/*",
  "scripts/fetch_vmp_prev.py"
]

# Required to get full coverage when using Playwright
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
skip_covered = true

[tool.coverage.html]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "opencodelists.settings"
addopts = "--tb=native --ignore=node_modules --no-migrations --strict-markers"
filterwarnings = [
  "ignore:The FORMS_URLFIELD_ASSUME_HTTPS transitional setting is deprecated.",
]
markers = [
  "functional: tests that use Playwright in functional tests",
]

# This is the pytest-django default. We're setting it explicitly, to
# make it clear that tests are not run in debug mode.
django_debug_mode = false

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "assets",
  "coding_systems/snomedct/parser_utils/",
  "coverage",
  "deploy",
  "docker",
  "docs",
  "htmlcov",
  "*/migrations/",
  "node_modules",
  "static",
  "staticfiles",
  "venv",
]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "E501",
  "E731",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"gunicorn.conf.py" = ["INP001"]
"manage.py" = ["INP001"]
"codelists/views/__init__.py" = ["F401"]
"opencodelists/views/__init__.py" = ["F401"]

# Note: any `exclude-newer-package` timestamps should be removed if > 7 days old.
# See https://github.com/opensafely-core/opencodelists/blob/main/DEVELOPERS.md for details.
[tool.uv]
required-version = ">=0.9"
exclude-newer = "2026-05-22T00:00:00Z"
exclude-newer-package = {}

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "djhtml",
    "hypothesis",
    # for scripts/import_codelists_from_xlsx.py
    "pandas",
    # For scripts/fetch_vmp_prev.py
    "paramiko",
    "pre-commit",
    "pytest-cov",
    "pytest-django",
    "pytest-playwright",
    "responses",
    "ruff",
]
